# delivery_database_administration_psql

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
database/: 1_init.sql  2_delivery.sql  delivery.sql
docs/: Отчет.md
migration/: env.py  schema.dump
migration/versions/: 782611aee236_initial.py  e667733376be_initial.py
src/: database_functions.py  logger_decorator.py  main.py
streamlit/: alembic.ini  app.py  db_procedures.py  logger.py
streamlit/migration/: env.py  schema.dump
streamlit/migration/versions/: 11f38c151c25_initial.py  3f32c66740ed_initial_migration.py  5b30d6842205_initial.py
